INCLUDE_DIRECTORIES(${PROJECT_DIR})

IF(SUSIE_PLUGIN)
	ADD_LIBRARY(susie SHARED ${PLUGIN_DIR}/Susie/susie.cc ${PLUGIN_DIR}/Susie/spi.def)
	ADD_DEPENDENCIES(susie freeimage)
	TARGET_LINK_LIBRARIES(susie freeimage)
	SET_TARGET_PROPERTIES(susie PROPERTIES OUTPUT_NAME "iffi" SUFFIX ".spi")
ENDIF()

IF(QT_PLUGIN)
	SET(CMAKE_INCLUDE_CURRENT_DIR ON)
	SET(CMAKE_AUTOMOC ON)
	FIND_PACKAGE(Qt5Widgets REQUIRED)
	ADD_LIBRARY(qfi SHARED ${PLUGIN_DIR}/Qt/main.cc ${PLUGIN_DIR}/Qt/fihandler.cc)
	ADD_DEPENDENCIES(qfi freeimage)
	QT5_USE_MODULES(qfi Widgets)
	TARGET_LINK_LIBRARIES(qfi freeimage)
ENDIF()

IF(FISHELLEXT)
	FILE(GLOB FI_EXT_FILES ${PLUGIN_DIR}/FIShellExt/*.cc)
	ADD_LIBRARY(FIShellExt SHARED ${FI_EXT_FILES} ${PLUGIN_DIR}/FIShellExt/ShellExt.def)
	ADD_DEFINITIONS(-DUNICODE -D_USRDLL)
	ADD_DEPENDENCIES(FIShellExt freeimage)
	TARGET_LINK_LIBRARIES(FIShellExt freeimage)
ENDIF()

IF(CONV_TEST)
	ADD_EXECUTABLE(convtest ${PLUGIN_DIR}/Test/conv.cc)
	ADD_DEPENDENCIES(convtest freeimage)
	TARGET_LINK_LIBRARIES(convtest freeimage)
ENDIF()
